--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="side_bar">
+            <div class="side_bar" data-bind="visible: side_bar_shown">
                 <input placeholder="Filter" data-bind="event: {input: input_changed}">
                 <div class="locataions" data-bind="foreach: locations">
                     <div class="location" data-bind="text: title, click: $parent.location_clicked, css: {clicked}, visible: visible">
@@ -19,7 +19,7 @@
                 <header>
                     <!-- ≡ is copied from: https://www.materialui.co/unicode-characters I copied it because I can't type it-->
                     <!-- https://www.materialui.co/unicode-characters is copied from Google chrome browser. I copied it to attribute a content-->
-                    <i>≡</i>
+                    <i data-bind="click: toggle_side_bar">≡</i>
                     <h1>Neighborhood Map</h1>
                 </header>
                 <div id="map" class="map">
