Add map_loaded flag

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <div class="map_container">
                 <header>
-                    <!-- ≡ is copied from: https://www.materialui.co/unicode-characters I copied it because I can't type it-->
-                    <!-- https://www.materialui.co/unicode-characters is copied from Google chrome browser. I copied it to attribute a content-->
+                    <!-- "≡" is copied from: https://www.materialui.co/unicode-characters I copied it because I can't type it-->
+                    <!-- "https://www.materialui.co/unicode-characters" is copied from Google chrome browser. I copied it to attribute a content-->
                     <i data-bind="click: toggle_side_bar">≡</i>
                     <h1>Neighborhood Map</h1>
                 </header>
@@ -26,14 +26,14 @@
                 </div>
             </div>
             <!-- The value of the src attribute is copied from: http://knockoutjs.com/downloads/index.html I copied it because it's a string and needs to be exactly right-->
-            <!-- The http://knockoutjs.com/downloads/index.html is copied from Google Chrome browser. I copied it to attribute the copied value of the src attribute -->
+            <!-- "http://knockoutjs.com/downloads/index.html" is copied from Google Chrome browser. I copied it to attribute the copied value of the src attribute -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
             <script src="locations.js"></script>
             <script src="app.js"></script>
             <!-- "https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" is copied from: https://developers.google.com/maps/documentation/javascript/tutorial because I don't need to memorize this string-->
-            <!-- https://developers.google.com/maps/documentation/javascript/tutorial is copied from: Google Chrome browser. I copied it to attribute a content -->
+            <!-- "https://developers.google.com/maps/documentation/javascript/tutorial" is copied from: Google Chrome browser. I copied it to attribute a content -->
             <!-- The api key is copied from: https://console.cloud.google.com/apis/credentials?project=restaurant-revie-1523425866090 I copied it because I need to make the api works -->
-            <!-- https://console.cloud.google.com/apis/credentials?project=restaurant-revie-1523425866090 is copied from Google Chrome browser. I copied it to attribute the copied api key -->
+            <!-- "https://console.cloud.google.com/apis/credentials?project=restaurant-revie-1523425866090" is copied from Google Chrome browser. I copied it to attribute the copied api key -->
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcvTtkitnRqPDCyhTVrmyceRUHgiToN24&callback=initMap" async defer></script>
         </body>
     </html>
